# typing-challenge

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  main.py
backend/app/api/: __init__.py  dependencies.py  games.py  leaderboard.py  players.py  rate_limit.py  schemas.py
backend/app/domain/: __init__.py  game_state.py  nickname.py  prompt.py  scoring.py
backend/app/persistence/: __init__.py  base.py  engine.py  models.py  prompt_repository.py  prompt_seed.py  schema.py  seed_prompts.json
backend/tests/: api_helpers.py  test_api_games.py  test_api_leaderboard.py  test_api_players.py  test_api_result_length_guard.py  test_config.py  test_domain_game_state.py  test_domain_nickname.py  test_domain_prompt.py  test_domain_scoring.py  test_persistence.py  test_prompt_seed.py  test_property_game_state.py  test_property_leaderboard_aggregation.py  test_property_leaderboard_ordering.py  test_property_leaderboard_update.py  test_property_nickname.py  test_property_player_authorize.py  test_property_player_register.py  test_property_rate_limiting.py  test_property_score_uniqueness.py  test_property_scoring.py  test_property_scoring_service.py  test_property_single_live_game.py  test_property_timeout.py  test_service_game_begin.py  test_service_game_complete.py  test_service_game_create.py  test_service_leaderboard.py  test_service_player_authorize.py  test_service_player_register.py  test_service_scoring.py  test_service_timeout_sweeper.py  test_smoke.py
k8s/: ingress.yaml  (+4 more)
(+78 files in other folders)
